syntax = "proto3";
package lastmile.notification;
import "google/protobuf/timestamp.proto";

service NotificationService {
  rpc Notify(Notification) returns (Ack);
  rpc Subscribe(SubscribeRequest) returns (stream Notification);
}

message Notification {
  string user_id = 1; 
  string title = 2;
  string body = 3;
  map<string,string> metadata = 4;
}

message SubscribeRequest { string user_id = 1; }
message Ack { bool ok = 1; }
