syntax = "proto3";
package lastmile.rider;
import "google/protobuf/timestamp.proto";
import "common.proto";

service RiderService {
  rpc RegisterRideIntent(RegisterRideIntentRequest) returns (RideIntentResponse);
  rpc GetRideStatus(RideId) returns (RideStatus);
}

message RegisterRideIntentRequest {
  string user_id = 1;
  string station_id = 2;
  google.protobuf.Timestamp arrival_time = 3;
  string destination = 4;
  // optional: preferred driver types, max wait minutes, party_size
  int32 party_size = 4;
}

message RideIntentResponse { string intent_id = 1; }
message RideId { string id = 1; }

message RideStatus {
  enum Status { PENDING=0; SCHEDULED=1; PICKED_UP=2; COMPLETED=3; CANCELLED=4; }
  string intent_id = 1;
  Status status = 2;
  string trip_id = 3;
}
